# TODO: Move entire setup.cfg to pyproject.toml
#
[build-system]
# Version 64.0.0 is needed for editable installs without setup.py file
# https://setuptools.pypa.io/en/latest/references/keywords.html
requires = [
    "setuptools>=64.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 88
target-version = "py38"
show-fixes = true

[tool.ruff.lint]
# TODO: Fixup all instances of B904 and enable this rule
ignore = ["E501", "B904"]
select = [
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "E",    # pycodestyle
    "F",    # pyflake
    "I",    # isort
    "PLE",  # pylint error rules
    "PLW",  # pylint warning rules
    "PLC",  # pylint convention rules
    "RUF",  # ruff-specific rules
    "UP",   # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]
