[build-system]
build-backend = "setuptools.build_meta"
# Version 64.0.0 is needed for editable installs without setup.py file
# https://setuptools.pypa.io/en/latest/references/keywords.html
requires = [
  "setuptools>=64.0.0",
  "wheel"
]

[tool]

[tool.mypy]
warn_unused_configs = true
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["--cov=aiidalab_launch", "--cov-fail-under=80"]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow"]
filterwarnings = ["ignore::DeprecationWarning:docker.*:"]

[tool.ruff]
line-length = 88
show-fixes = true
target-version = "py38"

[tool.ruff.lint]
# TODO: Fixup all instances of B904 and enable this rule
ignore = ["E501", "B904"]
select = [
  "ARG",  # flake8-unused-arguments
  "B",  # flake8-bugbear
  "E",  # pycodestyle
  "F",  # pyflake
  "I",  # isort
  "PLE",  # pylint error rules
  "PLW",  # pylint warning rules
  "PLC",  # pylint convention rules
  "RUF",  # ruff-specific rules
  "UP"  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]
