[metadata]
name = aiidalab_launch
version = attr: aiidalab_launch.__version__
description = Tool to launch AiiDAlab on a local workstation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-launch
author = Carl Simon Adorf and the AiiDAlab team
author_email = aiidalab@materialscloud.org
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: AiiDA
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    click==8.1
    click-spinner==0.1.10
    docker==6.1.2
    packaging==21.3
    python-dotenv==0.19.1
    requests==2.26.0
    requests-cache==0.9.1
    tabulate==0.8.9
    toml==0.10.2
python_requires = >=3.8

[options.entry_points]
console_scripts =
    aiidalab-launch = aiidalab_launch.__main__:cli

[options.extras_require]
dev =
    bumpver==2023.1129
    dunamai==1.19.0
    pre-commit==3.5.0
tests =
    pytest~=7.4.3
    pytest-asyncio~=0.21.1
    pytest-cov~=4.1.0
    responses~=0.23.1

[flake8]
ignore =
    E501
    W503
    E203
per-file-ignores =
    tests/*: U100, U101

[mypy]
warn_unused_configs = True
disallow_untyped_calls = True

[mypy-docker.*]
ignore_missing_imports = True

[bumpver]
current_version = "v2023.1019"
version_pattern = "vYYYY.BUILD[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
aiidalab_launch/version.py =
    __version__ = "{version}"

[tool:pytest]
addopts = --cov=aiidalab_launch --cov-fail-under=80
asyncio_mode = auto
markers =
    slow: marks tests as slow
filterwarnings =
    ignore::DeprecationWarning:docker.*:
